--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WelCome To GitHub</h1>
-    <h2>Hello</h2>
+    <h3>Welcome TO Github</h3>
 </body>
 </html>
